@@ -2,7 +2,7 @@ Package: RadOnc
 Type: Package
 Title: Analytical Tools for Radiation Oncology
 Version: 1.1.6
-Date: 2019-03-28
+Date: 2020-10-02
 Author: Reid F. Thompson <reid.thompson@gmail.com>
 Maintainer: Reid F. Thompson <reid.thompson@gmail.com>
 Imports: stats, utils
